attempting to fix layout shifts

--- a/project/styles/main-large.css
+++ b/project/styles/main-large.css
@@ -1,7 +1,6 @@
 @media screen and (min-width: 768px) {
   body {
     font-size: 1.1rem;
-    line-height: 1.6;
     padding: 0 2rem;
   }
 
@@ -15,12 +14,6 @@
     text-align: center;
   }
 
-  main h1,
-  main h2,
-  main h3 {
-    min-height: 2.5rem;
-    line-height: 1.2;
-  }
 
   header,
   footer {
